correct width for essay table of contents - was expanding too wide at certain browser widths [#89161098]

--- a/sitemedia/css/belfast-style.css
+++ b/sitemedia/css/belfast-style.css
@@ -599,7 +599,7 @@ footer {
 @media(min-width:994px){
   .nav-list.sidenav.affix {
     position: fixed!important;
-    max-width: 30%;
+    max-width: 25%;
   }
   .nav-list.sidenav.affix.relative{
     position: relative!important;
